# PACE-2024

./: .gitignore  CMakeLists.txt  INSTALL_HIGHS.sh  LICENSE  LICENSE.md  MAKE_SUBMISSION.sh  Makefile  README.md  run.py
docs/: main.tex  references.bib
highs/: CMakeLists.txt
src/: CMakeLists.txt  barycenter_heuristic.hpp  bipartite_graph.hpp  branch_and_bound.hpp  branch_and_cut.hpp  components.hpp  crossing_number.hpp  crossing_number_matrix.hpp  crossings.hpp  debug.hpp  debug_printf.hpp  digraph.hpp  fpt_algo.hpp  graph.hpp  heuristics.hpp  index.hpp  input.hpp  instance.hpp  inverse.hpp  lp_wrapper.hpp  matrix.hpp  median_heuristic.hpp  oracle.hpp  output.hpp  patterns.hpp  printf.hpp  random.hpp  reliability_branching.hpp  shift_heuristic.hpp  topological_sort.hpp  transitive_hull.hpp  vector_intersection.hpp  vector_utils.hpp  weberknecht.cpp  weberknecht_h.cpp
src/exact/: branch_and_bound.hpp  branch_and_cut.cpp  branch_and_cut.hpp  exact_solver.cpp  exact_solver.hpp  highs_base.cpp  highs_base.hpp  highs_lp.cpp  highs_lp.hpp  highs_mip.hpp  info_structs.cpp  info_structs.hpp  lp_wrapper.hpp  reliability_branching.cpp  reliability_branching.hpp
src/heuristic/: barycenter_heuristic.cpp  barycenter_heuristic.hpp  heuristic_solver.hpp  heuristics.cpp  heuristics.hpp  lsearch_heuristic.cpp  lsearch_heuristic.hpp  median_heuristic.cpp  median_heuristic.hpp  relax_heuristic.hpp  rins_heuristic.cpp  rins_heuristic.hpp  round_heuristic.hpp  shift_heuristic.cpp  shift_heuristic.hpp  sort_heuristic.cpp  sort_heuristic.hpp
src/io/: input.cpp  input.hpp  output.hpp  parse_input.hpp  pipeline.hpp
src/log/: debug_printf.cpp  debug_printf.hpp
src/matrix/: matrix.hpp
src/model/: bipartite_graph.hpp  digraph.hpp  instance.cpp  instance.hpp
src/types/: types.hpp
src/utils/: crossings_utils.hpp  index_utils.hpp  randomness_utils.hpp  restr_graph_utils.hpp  test_utils.hpp  time.cpp  time.hpp  tle.hpp  topological_sort.hpp  transitive_hull.hpp  vector_utils.hpp
test/: 52.txt  CMakeLists.txt  Makefile  bipartite_graph.cpp  branch_and_bound.cpp  branch_and_cut.cpp  branch_and_cut_medium.cpp  branch_and_cut_tiny.cpp  clp.cpp  components.cpp  crossing_number.cpp  crossing_number_matrix.cpp  crossings.cpp  crossings_utils.cpp  debug.cpp  debug_printf.cpp  exact_solver.cpp  fpt_algo.cpp  glpk.cpp  heuristics.cpp  highs.cpp  highs_mip.cpp  index.cpp  input.cpp  instance.cpp  lp_wrapper.cpp  matrix.cpp  median_heuristic.cpp  oracle.cpp  parse_input.cpp  patterns.cpp  shift_heuristic.cpp  test_set_nof_crossings.py  test_utils.hpp  tiny_test_set_nof_crossings.py  topological_sort.cpp  transitive_hull.cpp
test/debug/52/: 52.txt  debug_52.py
test/medium_test_set/: 13.gr  14.gr  33.gr  34.gr  35.gr  54.gr  57.gr
test/medium_test_set/solutions/: 13.sol  14.sol  33.sol  34.sol  35.sol  54.sol  57.sol
test/my_tests/: random_50.gr  random_80.gr  random_threshold.gr  random_threshold.sol
